--- a/views/faces.jade
+++ b/views/faces.jade
@@ -7,10 +7,11 @@ block content
         a(href="/") Home
       li.active(role="presentation" )
         a(href="/facce") Facce da NaNoWriMo
-      li(role="presentation")
-        a(href="#") Stats
+      //-li(role="presentation")
+        //-a(href="#") Stats
        
-    p Per comparire nella lista, fai un post in 
+  .container
+    p.spaced Per comparire nella lista, fai un post in 
       a(href=qui, title="Thread originale NaNoWriMo") questo thread
           
         
