--- a/views/index.jade
+++ b/views/index.jade
@@ -10,8 +10,8 @@ block content
       //-li(role="presentation")
         //-a(href="#") Stats
      
-    
-    p Per comparire nella lista, fai un post in 
+  .container
+    p.spaced Per comparire nella lista, fai un post in 
       a(href=qui, title="Thread originale NaNoWriMo") questo thread
       
     if resultList.length > 0
